# preterm_PHH_brain_segmentation

./: .gitignore  abc_fetal copy.xlsx1.xlsx
data/: data_information.numbers  subject_case_name.csv  subject_case_name.xlsx  subject_case_name_PHH.xlsx  subject_case_name_and_GA.xlsx
source/: utils.py
source/evaluation/: assd_evaluation.py  assd_uncertainty.py  check_MCsamples_if_Bayesian.py  dice_evaluation.py  dice_uncertainty.py  hd95_evaluation.py  hd95_uncertainty.py  histogram_dice.R  networkParameterNumber.py  normalize_uncertainty_map.py  recall_NPV_accuracy_uncertainty_computation.py  show_p_concreteDropout.py  test.py  uncertainty_map_evaluation.py  uncertainty_map_evaluation_1.py  uncertainty_map_evaluation_2.py  uncertainty_map_evaluation_3.py  uncertainty_map_evaluation_4.py  uncertainty_map_evaluation_5.py  utils_uncertainty.py  volumeAbsoluteError_evaluation.py  volumeRelativeError_evaluation.py  volume_evaluation.py  volume_uncertainty.py
source/examples/: main_cross_validation_Bayesian_UNet.py  main_cross_validation_Bayesian_UNet_Spatial3DConcreteDropout.py  main_cross_validation_Bayesian_UNet_Spatial3DConcreteDropout_2.py  main_cross_validation_Bayesian_UNet_Spatial3DConcreteDropout_3.py  main_cross_validation_Bayesian_UNet_exp2.py  main_cross_validation_Bayesian_UNet_exp3.py  main_cross_validation_UNet.py  main_cross_validation_denseNet.py  (+6 more)
source/preprocessing/bias_field_correction/: CMakeLists.txt
source/preprocessing/histogram_matching/: CMakeLists.txt
source/preprocessing/histogram_matching/source/: histogramMatching.cpp
(+370 files in other folders)
