CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

PROJECT(bias_field_correction)

set(CMAKE_CXX_FLAGS "-O3 -pg -Wall")

set(BIAS_FIELD "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${BIAS_FIELD}/include)

find_package(ITK REQUIRED)
include(${ITK_USE_FILE})

FILE(
	GLOB_RECURSE
	SOURCE_FILES
	${BIAS_FIELD}/source/*
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ITK_LIBRARIES})