CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

PROJECT(histogramMatching)

set(CMAKE_CXX_FLAGS "-O3 -pg -Wall")

set(GRADIENT_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${GRADIENT_IMAGE}/include)

find_package(ITK REQUIRED)
include(${ITK_USE_FILE})

FILE(
	GLOB_RECURSE
	SOURCE_FILES
	${GRADIENT_IMAGE}/source/*
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ITK_LIBRARIES})